<resources>
    <string name="app_name">BEREC nntool</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_map">Map</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_test_selection">Select executed tests</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_single_result">Measurement Report</string>
    <string name="title_qos_result">Quality of Service</string>
    <string name="title_help">Help</string>

    <string name="not_available_short">n/a</string>

    <!-- CUSTOM VIEWS -->
    <string name="measurement_server_selection_default_server">Default</string>
    <string name="measurement_server_selection_title">Select a Measurement Server</string>
    <string name="measurement_server_selection_default_server_selected">Default server selected.</string>
    <string name="measurement_recent_result_title">View Your Measurement Report</string>

    <string name="geo_location_accuracy">Location ± {}</string>

    <string name="date_time_format_pattern">dd.MM.yyyy HH:mm</string>

    <string name="task_register_agent_dialog_info">Registering measurement agent…</string>
    <string name="task_measurement_initiation_dialog_info">Initiating measurement…</string>
    <string name="task_send_report_dialog_info">Sending report to collector…</string>

    <string name="measurement_data_consumption_warning">I am a data consumption warning!</string>

    <string name="interface_traffic_in">Traffic in</string>
    <string name="interface_traffic_out">Traffic out</string>

    <string name="cpu_text">CPU</string>
    <string name="ram_text">RAM</string>

    <string name="ipv4_text">IPv4</string>
    <string name="ipv6_text">IPv6</string>

    <!-- Alert dialog strings -->
    <string name="alert_send_measurement_result_title">Sending results</string>
    <string name="alert_send_measurement_results_error">An error occurred while sending measurement results.</string>
    <string name="alert_cancel_measurement_title">Abort measurement</string>
    <string name="alert_cancel_measurement_content">Abort current measurement?</string>
    <string name="alert_no_measurement_selected_title">No measurement enabled</string>
    <string name="alert_no_measurement_selected_content">There are no measurements enabled for execution. Please enable measurements in the settings.</string>
    <string name="alert_no_measurement_selected_to_settings">Go to settings!</string>
    <string name="alert_error_during_measurement_title">Error</string>
    <string name="alert_error_during_measurement_content">There has been an unexpected error during this measurement</string>

    <!-- Geo-location specific strings -->
    <string name="geo_location_km_h">km/h</string>
    <string name="geo_location_m">m</string>
    <string name="geo_location_sat">satellites</string>
    <string name="geo_location_gps">GPS</string>
    <string name="geo_location_network">Network</string>
    <string name="geo_location_dir_n">N</string>
    <string name="geo_location_dir_e">E</string>
    <string name="geo_location_dir_s">S</string>
    <string name="geo_location_dir_w">W</string>

    <!-- Signal/Technology specific strings -->
    <string name="technology_2g">2G</string>
    <string name="technology_3g">3G</string>
    <string name="technology_4g">4G/LTE</string>
    <string name="technology_wlan">WLAN</string>
    <string name="signal_info">%s at %d dBm</string>

    <!-- Gauge specific strings -->
    <string name="top_progress_bar_view_speed_unit">Mbps</string>
    <string name="top_progress_bar_view_ping_unit">ms</string>

    <string name="bottom_measurement_result_summary_view_download_unit">Download (Mbps)</string>
    <string name="bottom_measurement_result_summary_view_download_not_available">-</string>
    <string name="bottom_measurement_result_summary_view_upload_unit">Upload (Mbps)</string>
    <string name="bottom_measurement_result_summary_view_upload_not_available">-</string>
    <string name="bottom_measurement_result_summary_view_ping_unit">Ping (ms)</string>
    <string name="bottom_measurement_result_summary_view_ping_not_available">-</string>

    <string name="measurement_gauge_label_init">init</string>
    <string name="measurement_gauge_label_ping">ping</string>
    <string name="measurement_gauge_label_down">down</string>
    <string name="measurement_gauge_label_up">up</string>

    <string name="measurement_gauge_speed_zero">0</string>
    <string name="measurement_gauge_speed_one">1Mb</string>
    <string name="measurement_gauge_speed_two">10Mb</string>
    <string name="measurement_gauge_speed_three">100Mb</string>
    <string name="measurement_gauge_speed_four">1Gb</string>

    <!-- History specific strings -->
    <string name="history_header_unit_ms">(ms)</string>
    <string name="history_header_unit_mbps">(Mbps)</string>
    <string name="history_header_date">Date</string>
    <string name="history_header_ping">Ping</string>
    <string name="history_header_down">Down</string>
    <string name="history_header_up">Up</string>
    <string name="history_no_results_found">No results found.</string>
    <string name="history_disassociate_measurement">Disassociate this measurement</string>

    <!-- Result specific strings -->

    <string name="result_share_subject">Nettest result</string>
    <string name="result_share_intent_title">Share result</string>
    <string name="result_show_qos">Quality of Service results</string>

    <string name="result_qos_test_list_header">Tests</string>
    <string name="result_qos_test_list_item_header">Test #%1$d</string>

    <string name="result_qos_single_description">Description</string>
    <string name="result_qos_single_result">Result</string>
    <string name="result_qos_single_details">Details</string>

    <!-- Help specific strings -->
    <string name="help_link_history_section">history</string>
    <string name="help_link_result_section">result</string>
    <string name="help_link_qos_result_section">qos</string>
    <string name="help_link_statistics_section">statistics</string>
    <string name="help_link_map_section">map</string>
    <string name="help_link_settings_section">settings</string>

    <!-- Preference specific strings -->

    <string name="preference_enable_speed_title">Speed</string>
    <string name="preference_enable_speed_summary">Enable speed testing</string>
    <string name="preference_enable_qos_title">Quality of Service</string>
    <string name="preference_enable_qos_summary">Enable Quality of Service testing</string>
    <string name="preference_single_test_selection_title">Test selection</string>
    <string name="preference_single_test_selection_summary">Enable/Disable specific tests</string>
    <string name="preference_ipv4_only_title">IPv4 only</string>
    <string name="preference_ipv4_only_summary">Force IPv4 if available</string>
    <string name="preference_current_commit_hash">Unique commit hash of the current app</string>
    <string name="preference_current_commit_hash_copy_toast">Copied commit hash</string>

    <string name="preference_disassociate_user">Delete user</string>
    <string name="preference_disassociate_user_summary">Delete association with your measurements and revoke consent to terms and conditions</string>
    <string name="preference_disassociate_user_warning_title">Delete current user</string>
    <string name="preference_disassociate_user_warning_content">Do you really wish to delete your user? This will remove all measurements from your history and revoke your consent to the terms and conditions.</string>
    <string name="preference_disassociate_user_progress_dialog">Deleting user…</string>

    <string name="preference_category_test_selection">Test selection</string>
    <string name="preference_category_other_settings">Other settings</string>

    <!-- Preference test selection specific strings -->

    <string name="preference_category_speed_test_selection">Speed Tests</string>
    <string name="preference_category_qos_test_selection">Quality of Service Tests</string>
    <string name="preference_enable_ping_title">Ping</string>
    <string name="preference_enable_download_title">Download</string>
    <string name="preference_enable_upload_title">Upload</string>

    <!-- Map specific strings -->
    <string name="map_marker_popup_title">Measurement</string>

</resources>
