<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_action_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_action_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_action_statistics"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/title_settings" />

</menu>
