<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:background="@drawable/border_bottom">

            <TextView
                android:layout_margin="1dp"
                android:background="@color/theme_border_color"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:paddingLeft="3dp"
                android:layout_margin="1dp"
                android:background="@color/theme_border_color"
                android:text="@string/history_header_date"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:paddingRight="3dp"
                android:gravity="right"
                android:layout_margin="1dp"
                android:background="@color/theme_border_color"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/history_header_ping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/history_header_unit_ms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:paddingRight="3dp"
                android:gravity="right"
                android:layout_margin="1dp"
                android:background="@color/theme_border_color"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/history_header_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/history_header_unit_mbps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:paddingRight="3dp"
                android:gravity="right"
                android:layout_margin="1dp"
                android:background="@color/theme_border_color"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/history_header_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/history_header_unit_mbps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <ListView
        android:id="@+id/history_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/history_loading_progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/history_loading_error_text"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/Nettest.History.Error.Text"
        android:text="@string/history_no_results_found"/>
</RelativeLayout>